--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.1.*",
-        "bogardo/mailgun": "3.1.*"
+        "laravel/framework": "5.1.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
