--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,14 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.1.*"
+        "laravel/framework": "5.1.*",
+        "barryvdh/laravel-dompdf": "0.6.*",
+        "maatwebsite/excel": "~2.0.0",
+        "dingo/api": "1.0.*@dev",
+        "webpatser/laravel-uuid": "2.*",
+        "greggilbert/recaptcha": "dev-master",
+        "torann/geoip": "0.2.*@dev",
+        "lucadegasperi/oauth2-server-laravel": "5.0.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
